2009-11-22
 Added support for partial command tokens

2009-11-22
 Added html output option.

2009-10-03
 Added a check for expr calls in expressions.

2009-05-20
 Handle namespace variables better. [Bug 15644]

2009-05-20
 Fixed a bug where a command added though inline commend was not
 fully recognised internally. [Bug 15645]

2009-05-20
 Added info about some 8.6 commands to syntax db.

2009-02-17
 Misc improvments from Hans Goetz, including:
   bug removed in the result window context menu, add filter
   added new menu item "Save Result" in the result window context menu
   added option "Disable variable checking" in the options menu
   added option for editor "PFE" which is a popular freeware editor under WIN

2008-09-23
 Support initialising incr for 8.5
 Generate db for 8.6.
 Make a cmd line exe for Windows when wrapping.

Version 1.1.9

2008-03-14
 Changed to use 8.5 as default.

2008-03-14
 Detect Ctrl-Z in scripts, notifying about it.

2008-02-25
 Added ttk commands to syntaxbuild.
 Use the selected encoding on instrumented file and markup file.
 Warn if string argument to switch is constant.
 Experimental variable coverage

2008-01-27
 Started on a nocover pragma.

2007-12-09
 Support initial "+" in bind scripts. [FR 3893]

Version 1.1.8

2007-09-27
 Added a reset filter option in GUI. [FR 3586]
 Added break button in GUI. [FR 3412]
 Removed old {expand} syntax.

2007-06-18
 Added Del button for Db files. [Bug 11109]
 Added percentage in coverage output. [FR 3428]

2007-06-13
 Improved error messages for comments in db files. [Bug 11109]
 Check if file is being reinstrumented. [FR 3424]

2007-05-17
 Made code coverage count number of runs instead of just run/notrun. [FR 3415]
 Fixed a bug in expression checking. [Bug 11091]

2007-03-09
 Check bind scripts in global context. New token "C".
 Fixed edit window startup problem.

2007-03-03
 Filter multiple line messages better in GUI. [Bug 10515]
 Corrected syntax for time command. [Bug 10496]

Version 1.1.7
